--- a/tailwind.css
+++ b/tailwind.css
@@ -564,10 +564,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -731,7 +727,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-theme {
   --tw-bg-opacity: 1;
-  background-color: rgb(63 63 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 195 137 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -742,31 +738,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-nav {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 83 / var(--tw-bg-opacity));
-}
-
-.bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -818,15 +789,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 2.5rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
 .text-center {
   text-align: center;
 }
 
-.font-poppins {
+.font-raleway {
   font-family: 'Raleway', sans-serif;
 }
 
@@ -858,9 +825,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-selected-text {
+.text-theme {
   --tw-text-opacity: 1;
-  color: rgb(163 163 255 / var(--tw-text-opacity));
+  color: rgb(0 195 137 / var(--tw-text-opacity));
 }
 
 .text-secondary {
@@ -907,7 +874,7 @@ body {
   width: 3rem;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(63 63 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 195 137 / var(--tw-bg-opacity));
 }
 
 .section-paragraph {
@@ -949,9 +916,9 @@ body {
 
 .selected-circle {
   --tw-border-opacity: 1;
-  border-color: rgb(63 63 255 / var(--tw-border-opacity));
+  border-color: rgb(0 195 137 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
-  background-color: rgb(63 63 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 195 137 / var(--tw-bg-opacity));
 }
 
 .nav-dot:hover span {
@@ -1020,6 +987,11 @@ body {
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1100,14 +1072,14 @@ body {
     padding-right: 4rem;
   }
 
-  .lg\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
   .lg\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
+  }
+
+  .lg\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
   .lg\:text-left {
@@ -1116,6 +1088,11 @@ body {
 
   .lg\:text-7xl {
     font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
     line-height: 1;
   }
 }
