--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -2,6 +2,7 @@
 import "../index.css";
 import Header from "@lib/Header.svelte";
 import Footer from "@lib/Footer.svelte";
+const props = Astro.props;
 ---
 
 <html lang="en">
@@ -9,7 +10,8 @@ import Footer from "@lib/Footer.svelte";
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{props.title} | ytsruh.com</title>
+    <meta name="description" content={props.desc} />
   </head>
   <body class="bg-body text-white font-raleway">
     <main>
