--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,9 @@
 ---
-import MainLayout from "../layouts/main.astro";
+import MainLayout from "@layouts/main.astro";
 import ContactIcons from "@lib/ContactIcons.svelte";
 ---
 
-<MainLayout>
+<MainLayout title="Contact" desc="The contact page for ytsruh.com. Contact using email & social media.">
   <div class="container mt-20 lg:mt-36 mx-auto px-8 md:px-14 lg:px-24">
     <section class="w-full">
       <h2 id="contact" class="secondary-title">Contact me</h2>
