--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths() {
 const { project } = Astro.props;
 ---
 
-<MainLayout>
+<MainLayout title={project.name} desc={project.description}>
   <div
     class="container mt-20 lg:mt-36 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
   >
