--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,7 +7,7 @@ const introText =
   "I've worked on a number of JavaScript projects, both client & server side. I have featured some of them below to show new technologies that have been used or where a project is deployed.";
 ---
 
-<MainLayout>
+<MainLayout title="Projects & Portfolio" desc={introText}>
   <div
     class="container mt-20 lg:mt-36 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
   >
