--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,9 @@
 ---
-import MainLayout from "../layouts/main.astro";
+import MainLayout from "@layouts/main.astro";
 import PageTitle from "@lib/PageTitle.svelte";
 ---
 
-<MainLayout>
+<MainLayout title="404 : Not Found" desc="Oh no. This page cannot be found, this is a 404 error.">
   <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
     <section class="w-full">
       <div>
