--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -5,7 +5,7 @@ import PageTitle from "@lib/PageTitle.svelte";
 export async function getStaticPaths() {
   return projects.map((project) => {
     return {
-      params: { id: project.id },
+      params: { id: project.id.toString() },
       props: { project },
     };
   });
