--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -23,14 +23,10 @@ const introText = "A now page. An overview of whats going on right now and what 
         </li>
         <li class="flex items-center">
           <div class="icon mr-5"><FaTag /></div>
-          <p>Rennovating property</p>
-        </li>
-        <li class="flex items-center">
-          <div class="icon mr-5"><FaTag /></div>
           <p>Improving my fitness</p>
         </li>
       </ul>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-5 py-5 md:py-10">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 py-5 md:py-10">
         <div>
           <h2 class="secondary-title">Go</h2>
           <p class="py-2">
@@ -41,9 +37,17 @@ const introText = "A now page. An overview of whats going on right now and what 
         <div>
           <h2 class="secondary-title">TypeScript</h2>
           <p class="py-2">
-            Currently I'm upgrading my projects to TypeScript. JavaScript was a great starting point but the
+            Currently upgrading all projects to TypeScript. JavaScript is a great starting point but the
             advanced parts of TypeScript have really helped reduce bugs and make web applications easier to
             build.
+          </p>
+        </div>
+        <div>
+          <h2 class="secondary-title">Webiliti</h2>
+          <p class="py-2">
+            After running into various accessibility challenges working at LSEG I was inspired to build
+            Webiliti. The accessibility & web testing application that is designed to help web managers stay
+            on top of accessibility for their websites.
           </p>
         </div>
       </div>
