--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -45,9 +45,9 @@ const introText = "A now page. An overview of whats going on right now and what 
         <div>
           <h2 class="secondary-title">Webiliti</h2>
           <p class="py-2">
-            After running into various accessibility challenges working at LSEG I was inspired to build
-            Webiliti. The accessibility & web testing application that is designed to help web managers stay
-            on top of accessibility for their websites.
+            After running into various challenges working at LSEG I was inspired to build Webiliti. The web
+            management & testing application that is designed to help web managers stay on top of their
+            websites.
           </p>
         </div>
       </div>
