--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -12,19 +12,22 @@ const props = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{props.title} | ytsruh.com</title>
     <meta name="description" content={props.desc} />
+    <!-- Google tag (gtag.js) -->
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-YWD06BK236">
+
+    </script>
+
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-YWD06BK236");
+    </script>
   </head>
   <body class="bg-body text-white font-raleway">
     <main>
-      <!-- Google Tag Manager (noscript) -->
-      <noscript>
-        <iframe
-          title="Google Tag Manager"
-          src="https://www.googletagmanager.com/ns.html?id=GTM-W8HB92T"
-          height="0"
-          width="0"
-          style="display:none;visibility:hidden"></iframe>
-      </noscript>
-      <!-- End Google Tag Manager (noscript) -->
       <Header client:load />
       <div class="main-height">
         <slot />
