--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import PageTitle from "@lib/PageTitle.svelte";
           title="404: Page Not Found"
           intro="We can't find this page. Please return to the homepage & try again"
         />
-        <img src="/img/400.jpeg" alt="404 Page Not Found" />
+        <img src="/img/400.webp" alt="404 Page Not Found" />
       </div>
     </section>
   </div>
