--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ import projects from "../lib/projects.json";
         >
           <!-- logo -->
           <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
-            <img src="img/lseg.svg" alt="London Stock Exchange Logo" width="100%" />
+            <img src="img/lseg.webp" alt="London Stock Exchange Logo" width="100%" />
           </div>
           <!-- info -->
           <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
@@ -109,7 +109,7 @@ import projects from "../lib/projects.json";
         >
           <!-- logo -->
           <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
-            <img src="img/refinitiv.jpeg" alt="Refinitiv Logo" width="100%" />
+            <img src="img/refinitiv.webp" alt="Refinitiv Logo" width="100%" />
           </div>
           <!-- info -->
           <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
@@ -133,7 +133,7 @@ import projects from "../lib/projects.json";
         >
           <!-- logo -->
           <div class="m-6 lg:mb-0 grid grid-cols-1 place-content-center md:basis-1/3">
-            <img src="img/thomson-reuters.png" alt="Thomson Reuters Logo" width="100%" />
+            <img src="img/thomson-reuters.webp" alt="Thomson Reuters Logo" width="100%" />
           </div>
           <!-- info -->
           <div class="flex flex-wrap justify-center text-center lg:text-left lg:block md:basis-2/3">
