feat: Header update & content updates

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -30,8 +30,7 @@ const introText = "A now page. An overview of whats going on right now and what 
         <div>
           <h2 class="secondary-title">Go</h2>
           <p class="py-2">
-            My main goal in 2023 is learning Go. I've been keen to learn a faster language than JavaScript in
-            order to deal with data more effeciently and Go provides speed & simplicty.
+            My main goal in 2024 is to continue learning Go. I've been keen to learn a faster language than JavaScript in order to deal with data more effeciently and Go provides speed & simplicty.
           </p>
         </div>
         <div>
