feat:removed wrangler & updated dependancies

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -6,38 +6,41 @@ const props = Astro.props;
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{props.title} | ytsruh.com</title>
-    <meta name="description" content={props.desc} />
-    <!-- Google tag (gtag.js) -->
-    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-YWD06BK236">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>{props.title} | ytsruh.com</title>
+        <meta name="description" content={props.desc} />
+        <!-- Google tag (gtag.js) -->
+        <script
+            type="text/partytown"
+            is:inline
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-YWD06BK236"
+        ></script>
 
-    </script>
-
-    <script type="text/partytown">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        window.dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-YWD06BK236");
-    </script>
-  </head>
-  <body class="bg-body text-white font-raleway">
-    <main>
-      <Header client:load />
-      <div class="main-height">
-        <slot />
-      </div>
-      <Footer />
-    </main>
-    <style>
-      .main-height {
-        min-height: 60vh;
-      }
-    </style>
-  </body>
+        <script type="text/partytown" is:inline>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                window.dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-YWD06BK236");
+        </script>
+    </head>
+    <body class="bg-body text-white font-raleway">
+        <main>
+            <Header client:load />
+            <div class="main-height">
+                <slot />
+            </div>
+            <Footer />
+        </main>
+        <style>
+            .main-height {
+                min-height: 60vh;
+            }
+        </style>
+    </body>
 </html>
