--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -2,6 +2,7 @@
 import "../index.css";
 import Header from "@lib/Header.svelte";
 import Footer from "@lib/Footer.svelte";
+import PostHog from '@lib/PostHog.astro';
 const props = Astro.props;
 ---
 
@@ -12,22 +13,7 @@ const props = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{props.title} | ytsruh.com</title>
         <meta name="description" content={props.desc} />
-        <!-- Google tag (gtag.js) -->
-        <script
-            type="text/partytown"
-            is:inline
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=G-YWD06BK236"
-        ></script>
-
-        <script type="text/partytown" is:inline>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                window.dataLayer.push(arguments);
-            }
-            gtag("js", new Date());
-            gtag("config", "G-YWD06BK236");
-        </script>
+        <PostHog />
     </head>
     <body class="bg-body text-white font-raleway">
         <main>
