--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.secondary-title {
+	@apply text-3xl font-bold;
+}
+
+.secondary-title::before {
+	content: '';
+	@apply bg-theme mb-1 block h-2 w-12 rounded-full;
+}
