feat: moved all pages except blog to react

--- a/app/app.css
+++ b/app/app.css
@@ -1,13 +1,20 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-raleway: "'Raleway'", sans-serif;
+
+  --color-body: #000000;
+  --color-theme: #00c389;
+  --color-nav: #404053;
+  --color-secondary: #9191A4;
+  --color-badge: #3F3F51;
+  --color-input-border: #565666;
+  --color-input: #2A2A35;
 }
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-body font-raleway text-white;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
